--- a/Volume Profile.Rmd
+++ b/Volume Profile.Rmd
@@ -20,7 +20,7 @@ library(plotly)
 
 #
 ```{r}
-BTC <- getSymbols("BTC-USD", auto.assign = F)
+BTC <- getSymbols("LTC-USD", auto.assign = F)
 names(BTC) <- c("Open", "High", "Low", "Close", "Volume", "Adjusted")
 BTC <- data.frame(Date = index(BTC), coredata(BTC))
 ```
@@ -53,9 +53,9 @@ subplot(fig2, fig1, shareY = T)
 
 ```{r}
 lookback = 210
-bins = 500
-binwidth = 100
-centers = 7
+bins = 1000
+binwidth = 15
+centers = 6
 
 ##
 t <- BTC_Long %>% slice_tail(n = 4*lookback) %>%
